--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Glegoo);
 
+@import url("https://fonts.googleapis.com/css?family=Anaheim|Quattrocento+Sans:400,700");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700|Raleway:300,400,600");
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -12,7 +15,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Montserrat", "Roboto Condensed", sans-serif;
 }
 
 h2 {
@@ -35,6 +38,8 @@ ul {
 }
 
 ul li {
+  font-weight: normal;
+  font-size: 14px;
   list-style: none;
 }
 
@@ -97,7 +102,7 @@ a:hover {
 .social-share a {
   font-size: 20px;
   color: #fff;
-  background: #02bdd5;
+  background: #3D3E3D;
   padding: 4px 10px;
   display: inline-block;
 }
@@ -136,9 +141,9 @@ a:hover {
 .global-page-header {
   background-attachment: fixed;
   background-size: cover;
-  padding: 120px 0 25px 0;
+  padding: 150px 0 40px 0;
   position: relative;
-  background: #02bdd5;
+  background: #3D3E3D;
   color: #fff;
 }
 
@@ -146,7 +151,7 @@ a:hover {
   font-size: 42px;
   font-weight: bold;
   color: #fff;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .global-page-header .breadcrumb {
@@ -229,7 +234,7 @@ a:hover {
 }
 
 .navbar .nav-item .nav-link:hover {
-  color: #02bdd5 !important;
+  color: #3D3E3D !important;
 }
 
 .navbar .nav-item:last-child .nav-link {
@@ -275,7 +280,7 @@ a:hover {
 }
 
 .dropdown-item:hover {
-  color: #02bdd5 !important;
+  color: #3D3E3D !important;
   background: transparent;
 }
 
@@ -290,7 +295,7 @@ a:hover {
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
-  padding: 230px 0;
+  padding: 250px 0 120px;
   color: #fff;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
   position: relative;
@@ -332,6 +337,17 @@ a:hover {
   margin-top: 25px;
 }
 
+#hero-area a {
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 38px;
+  line-height: 27px;
+  text-transform: uppercase;
+  color: #28675F;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 25px;
+}
+
 #hero-area .btn {
   background: #414141;
   border: none;
@@ -347,7 +363,7 @@ a:hover {
 }
 
 #call-to-action {
-  background: #02bdd5;
+  background: #3D3E3D;
   background-size: cover;
   background-attachment: fixed;
   padding: 80px 0;
@@ -377,7 +393,7 @@ a:hover {
 #call-to-action .block .btn-contact {
   background: #fff;
   border: 2px solid #fff;
-  color: #02bdd5;
+  color: #3D3E3D;
   padding: 15px 34px;
   margin-top: 20px;
   font-size: 12px;
@@ -393,7 +409,7 @@ a:hover {
 
 #call-to-action .block .btn-contact:hover {
   color: #fff;
-  background: #02bdd5;
+  background: #3D3E3D;
 }
 
 #about {
@@ -420,6 +436,37 @@ a:hover {
 
 #about .block img {
   max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; 
+  border-radius: 50%;
+}
+
+
+#about .media {
+  margin: 0px 0 40px 0;
+}
+
+#about .media .media-left {
+  padding-right: 15px;
+}
+
+#about .icon {
+  text-decoration: none;
+  color: #fff;
+  background-color: #3D3E3D;
+  height: 75px;
+  text-align: center;
+  width: 75px;
+  font-size: 40px;
+  line-height: 75px;
+  overflow: hidden;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  
 }
 
 .about-feature .block {
@@ -433,7 +480,7 @@ a:hover {
 }
 
 .about-feature .about-feature-1 {
-  background: #02bdd5;
+  background: #3D3E3D;
 }
 
 .about-feature .about-feature-2 {
@@ -498,7 +545,7 @@ a:hover {
 figure {
   background: #fff;
   margin-bottom: 45px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.04), 0 2px 10px 0 rgba(0, 0, 0, 0.06);
+  max-width: 90%;
 }
 
 figure .img-wrapper {
@@ -507,12 +554,25 @@ figure .img-wrapper {
 }
 
 figure img {
+  max-width: 90%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transform: scale3d(1, 1, 1);
+  transition: transform 400ms;
+}
+
+figure  .half-size{
+  max-width: 45%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   transform: scale3d(1, 1, 1);
   transition: transform 400ms;
 }
 
 figure:hover img {
-  transform: scale3d(1.2, 1.2, 1);
+  /* transform: scale3d(1.1, 1.1, 1); */
 }
 
 figure:hover .overlay {
@@ -564,8 +624,8 @@ figure .buttons {
 }
 
 figure .buttons a:hover {
-  background: #02bdd5;
-  border-color: #02bdd5;
+  background: #3D3E3D;
+  border-color: #3D3E3D;
 }
 
 figure .buttons a:focus {
@@ -573,23 +633,24 @@ figure .buttons a:focus {
 }
 
 figure figcaption {
-  padding: 20px 25px;
+  padding: 0px 40px 20px;
   margin-top: 0;
   color: #666;
 }
 
 figure figcaption h4 {
   margin: 0;
+  padding-top: 10px;
 }
 
 figure figcaption h4 a {
-  color: #02bdd5;
+  color: #3D3E3D;
 }
 
 figure figcaption p {
   font-size: 14px;
   margin-bottom: 0;
-  margin-top: 5px;
+  margin-top: 2px;
 }
 
 #feature {
@@ -623,7 +684,7 @@ figure figcaption p {
 #feature .icon {
   text-decoration: none;
   color: #fff;
-  background-color: #02bdd5;
+  background-color: #3D3E3D;
   height: 100px;
   text-align: center;
   width: 100px;
@@ -640,7 +701,7 @@ figure figcaption p {
 
 .wrapper_404 h1 {
   font-size: 200px;
-  color: #02bdd5;
+  color: #3D3E3D;
   line-height: 1;
 }
 
@@ -674,6 +735,7 @@ article {
 
 .blog-content h2 {
   font-family: 'Roboto', sans-serif;
+  text-transform: capitalize;
 }
 
 .blog-content h2 a {
@@ -702,15 +764,15 @@ article {
 }
 
 .blog-content .btn-details {
-  color: #02bdd5;
+  color: #3D3E3D;
   padding: 0;
-  background: #02bdd5;
+  background: #3D3E3D;
   color: #fff;
   padding: 8px 18px;
   border-radius: 0;
   margin-top: 15px;
   border: 1px solid #fff;
-  box-shadow: 0px 0px 0px 1px #02bdd5;
+  box-shadow: 0px 0px 0px 1px #3D3E3D;
 }
 
 .blog-post-image {
@@ -790,7 +852,7 @@ article {
 }
 
 .sidebar .recent-post ul li a:hover {
-  color: #02bdd5;
+  color: #3D3E3D;
 }
 
 .sidebar .recent-post time {
@@ -814,9 +876,9 @@ article {
 #contact-section .contact-form .btn-send {
   color: #fff;
   outline: none;
-  background: #02bdd5;
+  background: #3D3E3D;
   transition: all linear .2s;
-  border-color: #02bdd5;
+  border-color: #3D3E3D;
   border-radius: 0;
 }
 
@@ -866,7 +928,7 @@ article {
 #contact-section .email i,
 #contact-section .phone i {
   font-size: 45px;
-  color: #02bdd5;
+  color: #3D3E3D;
 }
 
 #contact-section .address h5,
@@ -925,6 +987,21 @@ article {
   color: #fff;
 }
 
+.portfolio-meta-authors span {
+  color: #fff;
+  padding: 10px 15px 10px 15px;
+}
+
+.portfolio-meta-authors a {
+  color: #fff;
+  font-weight: 500;
+}
+
+.portfolio-meta-authors a:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+
 .single-post {
   padding: 80px 0 20px;
 }
@@ -933,11 +1010,19 @@ article {
   padding: 40px 0;
 }
 
+.post-content h1, h2, h3, h4, h5{
+  padding-top: 15px;
+}
+
 .post-content blockquote p {
   padding: 10px 20px;
   margin: 0 0 20px;
   font-size: 17.5px;
   border-left: 5px solid #eee;
+}
+
+.post-content iframe{
+  max-width: 75%;
 }
 
 .single-post .post-content ol li,
@@ -951,7 +1036,7 @@ article {
 }
 
 .single-post .media .media-body a {
-  color: #02bdd5;
+  color: #3D3E3D;
   font-size: 12px;
 }
 
@@ -977,7 +1062,7 @@ article {
 }
 
 .single-post .post-comment .btn-send {
-  background: #02bdd5;
+  background: #3D3E3D;
   color: #fff;
   border-radius: 0;
 }
@@ -1029,7 +1114,7 @@ article {
 
 .btn-work {
   color: #fff;
-  background: #02bdd5;
+  background: #3D3E3D;
   border-radius: 0;
 }
 
@@ -1043,7 +1128,7 @@ article {
 
 #product-showcase-banner .block h2 {
   font-size: 40px;
-  color: #02bdd5;
+  color: #3D3E3D;
   margin-bottom: 20px;
   margin-top: 0;
 }
@@ -1167,7 +1252,7 @@ article {
 
 #related-items .block h4 span {
   float: right;
-  color: #02bdd5;
+  color: #3D3E3D;
 }
 
 #related-items .block .img-overly {
@@ -1208,7 +1293,7 @@ article {
 
 .service-page .service-parts .block i {
   font-size: 35px;
-  color: #02bdd5;
+  color: #3D3E3D;
 }
 
 .service-page .service-parts .block p {
@@ -1244,7 +1329,7 @@ article {
 }
 
 .team-member h3 {
-  color: #02bdd5;
+  color: #3D3E3D;
   margin-bottom: 0;
   font-size: 20px;
 }
@@ -1254,7 +1339,7 @@ article {
 }
 
 .team-member .social-icons a {
-  background: #02bdd5;
+  background: #3D3E3D;
   color: #fff;
   padding: 4px 8px;
   display: inline-block;
@@ -1277,7 +1362,7 @@ article {
 }
 
 #footer .copyright a {
-  color: #02bdd5;
+  color: #3D3E3D;
 }
 
 #footer .social {
@@ -1292,12 +1377,14 @@ article {
 
 #footer .social li a {
   font-size: 22px;
-  color: #02bdd5;
+  color: #3D3E3D;
 }
 
 .cd-headline.slide .cd-words-wrapper {
-  color: #02bdd5;
+  color: #28675F;
+  font-size: xx-large;
 }
+
 
 ul.social-icons {
   height: auto;
