--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,10 +8,11 @@
             <div class="col-md-12">
                 {{ range .Data.Pages }}
                 <article class="wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">
-                    
+
                     <div class="blog-post-image">
                         <a href="{{ .Permalink }}">
-                             {{ with .Params.image }}<img class="img-fluid" src="{{ . | absURL }}" alt="post-image"/>{{ end }}
+                            {{ with .Params.image }}<img class="img-fluid" src="{{ . | absURL }}"
+                                alt="post-image" />{{ end }}
                         </a>
                     </div>
                     <div class="blog-content">
@@ -33,7 +34,8 @@
                         <p>
                             {{ .Summary }}
                         </p>
-                        {{ with .Permalink }}<a href="{{ . }}" class="btn btn-dafault btn-details hvr-bounce-to-right">Continue Reading</a>{{ end }}
+                        {{ with .Permalink }}<a href="{{ . }}"
+                            class="btn btn-dafault btn-details hvr-bounce-to-right">Continue Reading</a>{{ end }}
                     </div>
                 </article>
                 {{ end }}
